添加音乐扫描功能